[package]
name = "radio_pd"
version = "0.1.0"
edition = "2021"

[dependencies]
libpd-rs = "0.2.0"
cpal = "0.15"
shout = "0.2.1"
vorbis_rs = "0.5.4"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
rosc = "~0.10"
rouille = "3.6.2"
